<resources>
    <string name="app_name">OMMCOM NEWS</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="demo_comment_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="title_activity_citizen_journalist">CitizenJournalistActivity</string>
    <string name="section_format">Hello World from slug: %1$d</string>

    <string name="facebook_app_id">726686604352046</string>
    <string name="fb_login_protocol_scheme">fb726686604352046</string>
    <string name="twitter_consumer_key">Bnrsv48ZWcr7dA8R80Y4l9mzf</string>
    <string name="twitter_consumer_secret_key">TA88j3gudvqrfAPmLFDeFwGWrszN3I7NvMW7a9n5n7rAWo1mTR</string>

    <string name="custom_search_google_key">AIzaSyBO6fY8WTGSgb7MKcILVblV-So-db_lukc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_font_family_for_headlines">font/helvetica_neue_bd.ttf</string>

    <string name="text_font_family_for_time">font/helvetica_neue_med.ttf</string>

    <string name="text_font_family_for_news_list_title">font/helvetica_neu_bold.ttf</string>

    <string name="text_font_family_for_time_bold">font/helvetica_neu_bold.ttf</string>
    <string name="text_font_family_for_splash_screen_app_name">font/helvetica_neu_bold.ttf</string>
    <string name="text_font_family_for_body">font/helvetica_neue_med.ttf</string>
    <string name="text_font_family_for_news_long_desc">font/helvetica_neue_medium.ttf</string>
    <string name="text_font_family_for_toolbar_app_title">font/georgia_bold.ttf</string>
    <string name="splash_app_name_text">OMMCOM NEWS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="play_str">PLAY</string>
    <string name="pause_str">PAUSE</string>
    <string name="citizen_journalist_heading">Want to be a citizen journalist?\nSimply fill in, upload your video/pictures.Describe in short on the issue. We post it unedited.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_scrolling_demo">Demo</string>

    <string name="about_us">Ommcom News is a first of its kind digital media venture in Odisha which caters to the growing need of people on the move to keep themselves updated primarily with the latest news of Odisha as well as stay informed on important national and international updates. Day\'s top news can be grabbed instantly on the finger tips through our mobile news app- Ommcom News and website- ommcomnews.com. Ommcom News believes in the power of digital technology backed by quality content delivered by passionate and experienced professionals. Latest Videos and pictures are the key to put perspective to a news and we make every effort to deliver our viewers the latest videos and pictures along with the news text.

Above all we understand the importance of people\'s voice on any issue and we intend to give them the platform to express their views. We also believe in the power of citizen journalism to raise issues in their locality and hence we provide them the toll in our app and website to easily use it and make a difference.

In short Ommcom News vision is not just to make people easily access instant and credible news of Odisha anytime anywhere but also make their opinion count and their every issues reflected and shared in the digital space.</string>

    <!--   LNAGUANGE-->

    <string name="language_en">English</string>
    <string name="language_od">ଓଡ଼ିଆ</string>
    <string name="more_odisha_en">VIEW MORE ODISHA NEWS</string>
    <string name="more_odisha_od">ଅଧିକ ଓଡ଼ିଆ ଖବର ପଢନ୍ତୁ </string>
    <string name="odisha_news_od">ଓଡ଼ିଶା ଖବର</string>
    <string name="odisha_news_en">ODISHA NEWS</string>
    <string name="citizen_j_en">CITIZEN JOURNALIST</string>
    <string name="citizen_j_od">ସିଟିଜେନ ଜର୍ଣ୍ଣାଲିଷ୍ଟ</string>
    <string name="live_stream_en">LIVE STREAMING</string>
    <string name="viral_vd_en">Viral Video</string>
    <string name="viral_vd_od">ଭାଇରାଲ ଭିଡ଼ିଓ</string>
    <string name="live_stream_od">ସିଧା ପ୍ରସାରଣ</string>


</resources>
